--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,20 @@
-td {
-    border: 1px solid black;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    vertical-align: middle;
-}
+
 h1 {
     font-size: 2em;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif
 }
 table {
     box-shadow: 5px 4px 7px 1px rgba(0, 0, 0, 0.4)
-}
-.Qua1, .Qua4 {
-    background-color: rgba(111, 111, 111, 0.5);
-}
-html, body {
-    height: 100%;
+    }
+html {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold
 }
 button {
+    font-weight: bold;
     font-size: 1em;
-    width: 90px;
+    width: 100px;
     height: 25px;
     border: 1px solid black;
     border-radius: 10px;
@@ -27,6 +22,35 @@ button {
     box-shadow: 5px 4px 7px 1px rgba(0, 0, 0, 0.4), inset -1px -2px 6px 0.5px rgba(0, 0, 0, 0.4);
     background-color: rgb(184, 250, 225)
 }
-.container{
-    display: inline-block
+#check, #jogo {
+    margin: 10px auto;
 }
+body {
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+}
+.container{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 4px 7px 1px rgba(0, 0, 0, 0.4), inset -1px -2px 6px 0.5px rgba(0, 0, 0, 0.4);
+    background-color: rgba(184, 250, 225, 0.5)
+}
+div.table {
+    display: flex;
+    justify-content: center;
+}
+td {
+    border: 1px solid black;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: white;
+}
+    .Qua1,
+    .Qua4 {
+        background-color: rgba(185, 185, 185, 1);
+    }
